@@ -6,7 +6,7 @@
 
   <groupId>io.github.habedi</groupId>
   <artifactId>multi-vector-hnsw</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Multi-Vector HNSW</name>
@@ -113,6 +113,26 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.plugin.version}</version>
+        <configuration>
+          <argLine>
+            --add-modules jdk.incubator.vector --add-opens
+            org.apache.logging.log4j.core/org.apache.logging.log4j.core.config.plugins=org.apache.logging.log4j.core
+            --add-opens
+            org.apache.logging.log4j.core/org.apache.logging.log4j.core.config.plugins.util=org.apache.logging.log4j.core
+            --add-opens
+            org.apache.logging.log4j.core/org.apache.logging.log4j.core.config.plugins.convert=org.apache.logging.log4j.core
+            --add-opens
+            org.apache.logging.log4j.core/org.apache.logging.log4j.core.lookup=org.apache.logging.log4j.core
+          </argLine>
+          <systemPropertyVariables>
+            <mv.hnsw.log.level>warn</mv.hnsw.log.level>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <version>${maven.source.plugin.version}</version>
         <executions>
@@ -130,15 +150,9 @@
         <version>${spotless.maven.plugin.version}</version>
         <configuration>
           <java>
-            <!--
-            <licenseHeader>
-              <file>${project.basedir}/LICENSE-MIT</file>
-              <delimiter>package </delimiter>
-            </licenseHeader>
-            -->
             <googleJavaFormat>
               <version>1.19.2</version>
-              <style>AOSP</style>
+              <style>GOOGLE</style>
             </googleJavaFormat>
           </java>
         </configuration>
@@ -174,6 +188,17 @@
     </plugins>
   </build>
 
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
+
   <profiles>
     <profile>
       <id>benchmark</id>
@@ -200,7 +225,6 @@
           <scope>provided</scope>
         </dependency>
       </dependencies>
-
       <build>
         <plugins>
           <plugin>
@@ -275,6 +299,52 @@
                 </configuration>
               </execution>
             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>${maven.javadoc.plugin.version}</version>
+            <executions>
+              <execution>
+                <id>attach-javadocs</id>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>3.2.4</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.7.0</version>
+            <extensions>true</extensions>
+            <configuration>
+              <serverId>ossrh</serverId>
+              <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
+            </configuration>
           </plugin>
         </plugins>
       </build>
